# cellbook

./: .gitignore  Cargo.toml  Cellbook.toml  LICENSE  README.md
.github/workflows/: ci.yml
cargo-cellbook/: Cargo.toml
cargo-cellbook/src/: errors.rs  loader.rs  main.rs  runner.rs  store.rs  watcher.rs
cargo-cellbook/src/tui/: config.rs  events.rs  mod.rs  state.rs  ui.rs
cellbook/: Cargo.toml
cellbook-cli/: Cargo.toml
cellbook-docs/: book.toml
cellbook-docs/src/: SUMMARY.md  command-line.md  configuration.md  library.md  overview.md
cellbook-macros/: Cargo.toml  README.md
cellbook-macros/src/: lib.rs
cellbook/src/: config.rs  context.rs  errors.rs  image.rs  lib.rs  macros.rs  registry.rs  test.rs
examples/context-demo/: Cargo.toml  cellbook.rs
examples/context-store/: Cargo.toml  cellbook.rs
examples/plot-timeseries/: Cargo.toml  Cellbook.toml  cellbook.rs
examples/plot-timeseries/data/: stock_prices.csv
examples/unit-test/: Cargo.toml  cellbook.rs
examples/versioned-types/: Cargo.toml  cellbook.rs
