[workspace]
default-members = ["cargo-cellbook", "cellbook", "cellbook-macros"]
exclude = []
members = ["cargo-cellbook", "cellbook", "cellbook-macros", "examples/*"]
resolver = "2"

[workspace.package]
categories = ["development-tools", "command-line-utilities", "science", "mathematics"]
edition = "2021"
keywords = ["notebook", "data-analysis", "statistics", "repl"]
license = "MIT"
repository = "https://github.com/dcompoze/cellbook"
version = "0.1.1"

[workspace.dependencies]
