[workspace]
default-members = ["cargo-cellbook", "cellbook", "cellbook-macros"]
exclude = []
members = ["cargo-cellbook", "cellbook", "cellbook-macros", "examples/*"]
resolver = "2"

[workspace.package]
categories = ["development-tools", "command-line-utilities", "science", "mathematics"]
edition = "2024"
keywords = ["notebook", "data-analysis", "statistics", "repl"]
license = "MIT"
repository = "https://github.com/dcompoze/cellbook"
version = "0.1.2"

[workspace.dependencies]
