[package]
categories.workspace = true
description = "Cargo subcommand for scaffolding cellbook projects"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cargo-cellbook"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[[bin]]
name = "cargo-cellbook"
path = "src/main.rs"

[dependencies]
bincode = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
libloading = "0.9"
notify = "8"
notify-debouncer-mini = "0.7"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
