[package]
categories.workspace = true
description = "Cellbook project runner and command line utility"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cargo-cellbook"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[[bin]]
name = "cargo-cellbook"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
libloading = "0.9"
notify = "8"
notify-debouncer-mini = "0.7"
parking_lot = "0.12"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
ratatui = "0.30"
gag = "1.0"
toml = "0.9"
dirs = "6"
