[package]
description = "Procedural macros for the cellbook crate"
edition.workspace = true
license.workspace = true
name = "cellbook-macros"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[lib]
name = "cellbook_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full", "visit-mut"] }
