[package]
categories.workspace = true
description = "Dynamic computational notebook environment in plain Rust"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cellbook"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[lib]
name = "cellbook"
path = "src/lib.rs"

[dependencies]
cellbook-macros = { version = "0.2", path = "../cellbook-macros" }
futures = "0.3"
inventory = "0.3"
parking_lot = "0.12"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
