[package]
edition = "2021"
name = "plot-timeseries"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "cellbook.rs"

[dependencies]
cellbook = { path = "../../cellbook" }
polars = { version = "0.51", features = ["lazy", "csv", "dtype-date"] }
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
