[package]
edition = "2024"
name = "plot-timeseries"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "cellbook.rs"

[dependencies]
anyhow = "1"
cellbook = { path = "../../cellbook" }
plotters = "0.3"
polars = { version = "0.51", features = ["lazy", "csv", "dtype-date"] }
serde = { version = "1", features = ["derive"] }
