[package]
name = "unit-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "cellbook.rs"

[dependencies]
anyhow = "1"
cellbook = { path = "../../cellbook" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
